# feature-scope

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  README_zh.md
.github/workflows/: clippy.yml  fmt.yml  publish.yml  test.yml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/basic_workspace/: Cargo.toml
examples/basic_workspace/entry_a/: Cargo.toml
examples/basic_workspace/entry_a/src/: main.rs
examples/basic_workspace/entry_b/: Cargo.toml
examples/basic_workspace/entry_custom/: Cargo.toml
examples/basic_workspace/entry_default/: Cargo.toml  build.rs
examples/basic_workspace/entry_default/src/: main.rs
examples/basic_workspace/types/: Cargo.toml
examples/basic_workspace/types/src/: lib.rs
feature-scope/: Cargo.toml
feature-scope-macros/: Cargo.toml
feature-scope-macros/src/: lib.rs
feature-scope/src/: lib.rs
