[workspace]
members = ["examples/basic", "packages/*"]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[workspace.package]
publish = true
authors = ["langyo <langyo.china@gmail.com>"]
description = "A helper library that enables workspace crates to independently control their required features without cross-package interference"
license = "Apache-2.0"
repository = "https://github.com/langyo/feature-scope"

version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "^1"
serde = { version = "^1", features = ["derive"] }
toml = "^0.9"
cargo-lock = "^10"
