[package]
name = "basic"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
feature-scope = { version = "*", path = "../../packages/feature-scope" }

[build-dependencies]
anyhow = { workspace = true }

feature-scope = { version = "*", path = "../../packages/feature-scope" }

[package.metadata.feature-scope-decl]
default = ["a"]
a = []
