[workspace]
members = ["types", "entry_custom", "entry_default"]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[workspace.package]
publish = false
authors = ["langyo <langyo.china@gmail.com>"]
repository = "https://github.com/langyo/feature-scope"
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
feature-scope = { path = "../../packages/feature-scope" }

anyhow = "^1"
