[package]
name = "entry_custom"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
_types = { path = "../types", package = "types" }
feature-scope = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

feature-scope = { workspace = true }

[[package.metadata.feature-scope]]
package = "types"
features = ["b"]
